@@ -1,3 +1,12 @@
+From f3c3107 (phasing):
+======================
+
+In prisim/interferometry.py,
+
+(*) In member function duplicate_measurements() of class
+InterferometerArray, duplicate attribute projected_baselines to the
+required shape
+
 From 7c44eb3 (master):
 =====================
 
